src/tests/data/SemanticErrors/TooMuchParams.c

#include <stdio.h>

void f(int a) {}

int main()
{
    f(1, 2, 3); // ERROR
	return 0;
}